--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -63,6 +63,15 @@ jobs:
         working-directory: ./MAIN/vpc_with_ecs
 
     steps:
+    # Write aws creds file
+    - name: write secrets
+      run: |
+          mkdir ~/.aws
+          echo $aws_profile > ~/.aws/credentials
+      shell: bash
+      env:
+        aws_profile : ${{secrets.AWS_PROFILE}}
+    
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v2
@@ -72,8 +81,6 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init  
@@ -86,8 +93,6 @@ jobs:
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       run: terraform plan --var-file _dev.tfvars
-      env:
-        aws_profile: ${{ secrets.AWS_PROFILE }}
 
       # On push to main, build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
