--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -66,7 +66,7 @@ jobs:
     # Write aws creds file
     - name: write secrets
       run: |
-          mkdir /root/.aws
+          mkdir /.aws
           # echo $aws_profile > /root/.aws/credentials
       env:
         aws_profile : ${{secrets.AWS_PROFILE}}
